# natural_parallel_computing_models

mpi/task_2/: CMakeLists.txt  analyse.ipynb
mpi/task_2/parallel/: CMakeLists.txt
mpi/task_2/parallel/src/: parallel.cpp
mpi/task_2/sequential/src/: sequential_example.cpp
mpi/task_3/: analysis.ipynb
mpi/task_3/parallel/src/: parallel.cpp
mpi/task_3/sequential/: CMakeLists.txt
mpi/task_3/sequential/src/: sequential_example.cpp
mpi/task_4/: analysis.ipynb
mpi/task_4/parallel/src/: parallel.cpp
mpi/task_4/sequential/src/: sequential_example.cpp
task_1/: CMakeLists.txt  analysis.ipynb
task_1/src/: parallel.cpp  sequential.cpp
